[gd_scene load_steps=12 format=2]

[ext_resource path="res://Objects/sign.png" type="Texture" id=1]
[ext_resource path="res://UI/UItheme.tres" type="Theme" id=2]
[ext_resource path="res://Objects/Sign.gd" type="Script" id=3]
[ext_resource path="res://UI/Fonts/VT323-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Shadows/7p shadow.png" type="Texture" id=5]
[ext_resource path="res://UI/exit_without_circle.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7, 1 )

[sub_resource type="CircleShape2D" id=2]
radius = 7.07107

[sub_resource type="DynamicFont" id=3]
size = 7
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Sign" type="StaticBody2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="7pShadow" type="Sprite" parent="."]
position = Vector2( -3.50791, -2.33861 )
texture = ExtResource( 5 )
centered = false
offset = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Sign" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -66.0
margin_right = -5.0
margin_bottom = -5.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Hello World!"
align = 1
valign = 1
autowrap = true

[node name="Label" type="Label" parent="CanvasLayer/Label"]
anchor_right = 1.0
margin_top = -2.0
margin_bottom = 23.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Sign Text:"
align = 1
valign = 1

[node name="Control" type="Control" parent="CanvasLayer/Label"]
margin_right = 40.0
margin_bottom = 40.0

[node name="exit" type="Button" parent="CanvasLayer/Label/Control"]
margin_left = 280.0
margin_right = 310.0
margin_bottom = 27.0
icon = ExtResource( 6 )
flat = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="pressed" from="CanvasLayer/Label/Control/exit" to="." method="_on_TouchScreenButton_pressed"]
